# terminal_cube

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: console.h
src/: console.c
